Mais aulas de django - renderizando html e utilizando css

--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>{% block  %}{% endblock  %}</h1>
+{% include 'global/partials/head.html' %}
+    <h1>{% block texto %} home da home no arquivo base{% endblock texto %}</h1>
 </body>
 </html>
